<resources>
    <string name="app_name">GroHome</string>
    <string name="m1_exit">Click to signout</string>
    <string name="m2_parse_error_msg">Failed to parse data</string>
    <string name="m3_bad_network_msg">Internet problem</string>
    <string name="m4_connect_error_msg">Connection error</string>
    <string name="m5_connect_timeout_msg">Connection timed out</string>
    <string name="m6_other_msg">unknown mistake</string>
    <string name="m7_username">Username</string>
    <string name="m8_password">Password</string>
    <string name="m9_registered">Registered</string>
    <string name="m10_scenes">Scenes</string>
    <string name="m11_service">Service</string>
    <string name="m12_mine">Mine</string>
    <string name="m13_grohome">Grohome</string>
    <string name="m14_login">Log in</string>
    <string name="m15_email">Email</string>
    <string name="m16_select_country">Please select a country</string>
    <string name="m17_select_time_zone">Select time zone</string>
    <string name="m18_set_up">Set up</string>
    <string name="m19_about">About</string>
    <string name="m20_avatar">Avatar</string>
    <string name="m21_change_password">Change Password</string>
    <string name="m22_phone_number">Phone number</string>
    <string name="m23_installer_code">Installer code</string>
    <string name="m24_log_out">Log out</string>
    <string name="m25_user_agreement">User Agreement</string>
    <string name="m26_consumer_hotline">consumer hotline</string>
    <string name="m27_company_website">Company website</string>
    <string name="m28_forget_password">Forget password</string>
    <string name="m29_user_agreement">Agree to user agreement</string>
    <string name="m30_verification_code">Verification code</string>
    <string name="m31_room">Room</string>
    <string name="m32_all">All</string>
    <string name="m33_device">Device</string>
    <string name="m34_welcome_groHome">Welcome GroHome</string>
    <string name="m35_add_device">Add device</string>
    <string name="m36_socket">Socket</string>
    <string name="m37_panel_switch">Panel switch</string>
    <string name="m38_thermostat">Thermostat</string>
    <string name="m39_bulb">Bulb</string>
    <string name="m40_light_strip">Light strip</string>
    <string name="m41_air_con">Air-con</string>
    <string name="m42_select_frequency">Select 2.4GHz Wi-Fi network and enter the password</string>
    <string name="m43_set_frequency">If your wifi is 5GHz, please set it to 2.4GHz</string>
    <string name="m44_router_setting_methods">Common router setting methods</string>
    <string name="m45_enter_wifi_name">Enter wifi name</string>
    <string name="m46_enter_wifi_password">Enter wifi password</string>
    <string name="m47_next">Next</string>
    <string name="m48_reset_device">Reset device</string>
    <string name="m49_flash_fast_set">Turn on the power, and make sure the indicator is flashing fast (0.5 seconds/1 time)</string>
    <string name="m50_complete_within_three">Please complete the distribution within three minutes</string>
    <string name="m51_reset_device_details">Reset device details</string>
    <string name="m52_make_sure_flashing_fast">Make sure the indicator is flashing fast</string>
    <string name="m53_adding_device">Adding device</string>
    <string name="m54_ensure_good_signal">Ensure good wifi signal</string>
    <string name="m55_find_device">Find device</string>
    <string name="m56_register_cloud">Register to the cloud</string>
    <string name="m57_device_initialization">Device initialization</string>
    <string name="m58_connect_hotspot">Connect your phone to a hotspot</string>
    <string name="m59_connect_hotspot_picture">Please connect your phone to the hotspot shown in the picture below</string>
    <string name="m60_return_continue_add">Return to this application to continue to add</string>
    <string name="m61_confirm_connection_correct">Confirm that the hotspot connection is correct</string>
    <string name="m62_to_connect">To connect</string>
    <string name="m63_ap_config_detail">Use compatible mode to configure the network, you need to set the indicator to the slow flashing state, please complete the setting according to the following 4 steps</string>
    <string name="m64_step">Step</string>
    <string name="m65_turn_on_ten_second">Turn on the device, and then turn off the power after 10 seconds</string>
    <string name="m66_press_reset_five">Press and hold the reset button for 5 seconds</string>
    <string name="m67_fast_flashing_to_next">After confirming that the indicator flashes quickly, proceed to the next step</string>
    <string name="m68_long_press_reset">Press and hold the reset button again for 5 seconds until the indicator flashes slowly</string>
    <string name="m69_message_center">Message Center</string>
    <string name="m70_share_device">Share device</string>
    <string name="m71_caching">Caching</string>
    <string name="m72_about">About</string>
    <string name="m73_agreement">User Agreement</string>
    <string name="m74_third_party">Third-Party Access Device</string>
    <string name="m75_alexa">Alexa</string>
    <string name="m76_google_assistant">Google Assistant</string>
    <string name="m77_manual">Manual</string>
    <string name="m78_faq">FAQ</string>
    <string name="m80_selection">Selection</string>
    <string name="m81_launch_tap_to_run">Launch tap to run</string>
    <string name="m82_smart">Smart</string>
    <string name="m83_logs">Logs</string>
    <string name="m84_recommend">Recommend</string>
    <string name="m85_add_scenes">Add Scenes</string>
    <string name="m86_scene_des">Timing/batch setting device, intelligent life.</string>
    <string name="m87_scenes">Scenes</string>
    <string name="m88_white_mode">White Mode</string>
    <string name="m89_cancel">Cancel</string>
    <string name="m90_ok">OK</string>
    <string name="m91_bright_ness">Brightness</string>
    <string name="m92_colour_temp">Colour Temperature</string>
    <string name="m93_request_permission">Request Permission</string>
    <string name="m94_location">location</string>
    <string name="m95_tips">Tips</string>
    <string name="m96_wifi_not_connected">Wifi not connected</string>
    <string name="m97_to_connect">To connect</string>
    <string name="m98_enter_wifi_password">Enter wifi password</string>
    <string name="m99_connected_5ghz_wifi">You are currently connected to 5GHz wifi</string>
    <string name="m100_go_on">go on</string>
    <string name="m101_switch_wifi">Switch WiFi</string>
    <string name="m102_ap_mode">AP Mode</string>
    <string name="m103_ap_mode">Confirm that the indicator is flashing slowly</string>
    <string name="m104_ap_mode">Choose a network distribution method</string>
    <string name="m105_ez_mode">EZ Mode</string>
    <string name="m106_refer_instructions">Please refer to the &quot;instructions&quot; or choose according to the type of equipment networking</string>
    <string name="m107_hotspot_to_device">The device produces Wi-Fi hotspots, and the mobile phone connects the device hotspots and transmits the distribution information to the device point-to-point</string>
    <string name="m108_device_connect_auto">After the mobile phone is connected to the router, it broadcasts the distribution information, and the device receiving the distribution information automatically connects to the router</string>
    <string name="m109_select_config_type">Choose a network distribution method</string>
    <string name="m110_privacy_policy">Privacy policy</string>
    <string name="m111_bluetooth_search">Bluetooth Search</string>
    <string name="m112_search_two_minutes">The search process may take up to two minutes</string>
    <string name="m113_please_do_not_during">Please do not perform any operations during this time</string>
    <string name="m114_find_device_add">Find the device to be added</string>
    <string name="m115_scanning_nearby">Scanning nearby device…</string>
    <string name="m116_turn_on_bluetooth">GroHome wants to turn on Bluetooth</string>
    <string name="m117_allow">ALLOW</string>
    <string name="m118_deny">DENY</string>
    <string name="m119_Bluetooth">Bluetooth</string>
    <string name="m120_Today">Today</string>
    <string name="m120_flashing_slowly_set">Turn on the power and make sure the indicator is flashing slowly (3 seconds / 1 time)</string>
    <string name="m121_make_sure_flashing_slowly">Confirm that the indicator is flashing slowly</string>
    <string name="m122_ez_config_detail">Use EZ mode to configure the network, you need to set the indicator to a flashing state, please complete the setting according to the following 3 steps</string>
    <string name="m123_fail_to_add_device">Fail to add device,please retry or check Help</string>
    <string name="m124_help">help</string>
    <string name="m125_got_it">Got it</string>
    <string name="m126_confirm_exit">Will stop adding devices, confirm exit?</string>
    <string name="m127_no">No</string>
    <string name="m128_device_not_responding">Device not responding Check demerit points and retry</string>
    <string name="m129_confirm_device_reset_slowly">Confirm that the device has been reset and the light is flashing slowly</string>
    <string name="m130_confirm_device_reset_fast">Check if the device has been reset and the indicator is blinking quickly</string>
    <string name="m131_whether_connect_hotspot">Whether to connect to the device hotspot</string>
    <string name="m132_verify_the_password">Verify the Wi-Fi password</string>
    <string name="m133_retry">Retry</string>
    <string name="m134_switch_pairing_mode">Switch Pairing Mode</string>
    <string name="m135_check_is_2_4GHz">Check if it is 2.4 GHZ Wi-Fi</string>
    <string name="m136_check_try_again">The device is not responding, please check the following issues and try again</string>
    <string name="m137_ap_config_detail">the light needs to be set to flash rapidly. Please follow the 4 steps below to flnish setting.</string>
    <string name="m138_reconnect">reconnect</string>
    <string name="m139_device_add_success">Device Successfully Added </string>
    <string name="m140_device_name">Device Name</string>
    <string name="m141_select_room">Select Room</string>
    <string name="m142_done">Done</string>
    <string name="m143_username_empty">Username is Empty!</string>
    <string name="m144_password_empty">PassWord is Empty!</string>
    <string name="m145_left_time">Left time</string>
    <string name="m146_timer">Timer</string>
    <string name="m147_scene">Scene</string>
    <string name="m148_edit">Edit</string>
    <string name="m149_device_does_not_exist">Device does not exist</string>
    <string name="m150_device_is_offline">Device is offline</string>
    <string name="m151_send_dps_failed">Failed to send instruction</string>
    <string name="m152_scene_night">Night</string>
    <string name="m153_scene_read">Read</string>
    <string name="m154_scene_meeting">Meeting</string>
    <string name="m155_scene_leisure">Leisure</string>
    <string name="m156_scene_soft">Soft</string>
    <string name="m157_scene_shine">Shine</string>
    <string name="m158_sence_gorgeous">gorgeous</string>
    <string name="m159_scence_rainbow">rainbow</string>
    <string name="m160_scence_colour">Scence Color</string>
    <string name="m161_colour_flash_mode">Colour Flash Mode</string>
    <string name="m162_reset">Reset</string>
    <string name="m163_static">Static</string>
    <string name="m222_single">Single</string>
    <string name="m224_everyday">Everyday</string>
    <string name="m225_monday">Monday</string>
    <string name="m226_tuesday">Tuesday</string>
    <string name="m227_wednesday">Wednesday</string>
    <string name="m228_thursday">Thursday</string>
    <string name="m229_friday">Friday</string>
    <string name="m230_saturday">Saturday</string>
    <string name="m231_sunday">Sunday</string>
</resources>