<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/headerView"
        layout="@layout/toobar_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:orientation="vertical">

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_onetime"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_textContent="@string/m222_single" />

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_everyday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_ischecked="false"
                        app:itemGroup_textContent="@string/m224_everyday" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:orientation="vertical">

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_monday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_textContent="@string/m225_monday" />

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_ischecked="false"
                        app:itemGroup_textContent="@string/m226_tuesday" />

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_ischecked="false"
                        app:itemGroup_textContent="@string/m227_wednesday" />

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_thursday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_ischecked="false"
                        app:itemGroup_textContent="@string/m228_thursday" />


                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_friday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_ischecked="false"
                        app:itemGroup_textContent="@string/m229_friday" />

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_saturday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_ischecked="false"
                        app:itemGroup_textContent="@string/m230_saturday" />

                    <com.growatt.grohome.customview.WeekSelectView
                        android:id="@+id/week_sunday"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        app:itemGroup_ischecked="false"
                        app:itemGroup_textContent="@string/m231_sunday" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
