<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/headerView"
        layout="@layout/toobar_title" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_75"
        android:text="@string/m128_device_not_responding"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_16"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />

    <TextView
        android:id="@+id/tv_error_tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m130_confirm_device_reset_fast"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title" />

    <TextView
        android:id="@+id/tv_error_tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m131_whether_connect_hotspot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_tip1" />


    <TextView
        android:id="@+id/tv_error_tip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m132_verify_the_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_tip2" />


    <Button
        android:id="@+id/btn_retry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/selector_button_circle"
        android:text="@string/m133_retry"
        android:textColor="@color/white"
        android:textSize="@dimen/size_title_sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_tip3" />


    <Button
        android:id="@+id/btn_apconfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/selector_button_circle"
        android:text="@string/m134_switch_pairing_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_retry" />


</androidx.constraintlayout.widget.ConstraintLayout>