<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/headerView"
        layout="@layout/toobar_title" />

    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m58_connect_hotspot"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_title_sp_14"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />


    <TextView
        android:id="@+id/tv_step_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_40"
        android:text="@string/m59_connect_hotspot_picture"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_page_title" />


    <ImageView
        android:id="@+id/v_background"
        android:layout_width="@dimen/dp_236"
        android:layout_height="@dimen/dp_125"
        android:layout_marginTop="@dimen/dp_8"
        android:scaleType="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_step_one" />

    <TextView
        android:id="@+id/tv_step_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_15"
        android:padding="@dimen/dp_5"
        android:text="@string/m60_return_continue_add"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_background" />


    <Button
        android:id="@+id/btn_note_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginRight="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/selector_button_circle"
        android:text="@string/m61_confirm_connection_correct"
        android:textColor="@color/white"
        android:textSize="@dimen/size_title_sp_14"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginRight="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_60"
        android:background="@drawable/selector_button_circle"
        android:text="@string/m62_to_connect"
        android:textColor="@color/white"
        android:textSize="@dimen/size_title_sp_14"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>