<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/status_bar_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/nocolor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/m89_cancel"
            android:textColor="@color/color_text_33"
            android:textSize="@dimen/size_title_sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iv_switch"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m111_bluetooth_search"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_title_sp_14"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_title" />


    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m112_search_two_minutes"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_page_title" />

    <TextView
        android:id="@+id/tv_sub_title_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m113_please_do_not_during"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title" />


    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_300"
        android:src="@drawable/bluetooth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title_two" />


    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/m115_scanning_nearby"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_search" />


</androidx.constraintlayout.widget.ConstraintLayout>