<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toobar_title" android:id="@+id/headerView" />


    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/m106_refer_instructions"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_fast_flash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/tv_sub_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title">

        <TextView
            android:id="@+id/tv_fast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/m105_ez_mode"
            android:textColor="@color/color_text_33"
            android:textSize="@dimen/size_content_sp_14"
            app:layout_constraintBottom_toTopOf="@+id/tv_fast_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_fast_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/m108_device_connect_auto"
            android:textColor="@color/color_text_33"
            android:textSize="@dimen/size_content_sp_14"
            android:layout_marginTop="@dimen/dp_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fast_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_slow_flash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/tv_sub_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_fast_flash">

        <TextView
            android:id="@+id/tv_slow_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/m102_ap_mode"
            android:textColor="@color/color_text_33"
            android:textSize="@dimen/size_title_sp_14"
            app:layout_constraintBottom_toTopOf="@+id/tv_slow_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_slow_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/m107_hotspot_to_device"
            android:textColor="@color/color_text_33"
            android:textSize="@dimen/size_content_sp_14"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_slow_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>